# mutsea

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
config/: mutsea.toml
docs/: ARCHITECTURE.md
mutsea-ai-content/: Cargo.toml
mutsea-ai-core/: Cargo.toml
mutsea-ai-nlp/: Cargo.toml
mutsea-ai-social/: Cargo.toml
mutsea-asset-server/: Cargo.toml
mutsea-assets/: Cargo.toml
mutsea-assets/src/: cache.rs  error.rs  lib.rs  service.rs  storage.rs
mutsea-benchmarks/: Cargo.toml
mutsea-cache/: Cargo.toml
mutsea-cli/: Cargo.toml
mutsea-cli/src/: main.rs
mutsea-compatibility/: Cargo.toml
mutsea-config/: Cargo.toml
mutsea-core/: Cargo.toml
mutsea-core/src/: config.rs  error.rs  events.rs  lib.rs  math.rs  traits.rs  types.rs
mutsea-database/: Cargo.toml  mutsea-database-architect.md
mutsea-database/examples/: database_setup.rs  opensim_basic.rs  opensim_integration.rs  quick_setup.rs
mutsea-database/migrations/: README.md
mutsea-database/migrations/postgresql/ai/: ai_decisions.sql  ai_global_mind_state.sql  emergent_behaviors.sql  learning_data.sql  npc_states.sql
mutsea-database/migrations/postgresql/analytics/: performance_metrics.sql
mutsea-database/migrations/postgresql/gameplay/: player_behaviors.sql  player_quest_progress.sql  quests.sql  story_events.sql
mutsea-database/migrations/postgresql/opensim/: opensim_compatibility.sql
mutsea-database/migrations/postgresql/world/: biomes.sql  ecosystem_states.sql  world_states.sql
mutsea-database/src/: connection.rs  error.rs  lib.rs  manager.rs  metrics.rs  models.rs  queries.rs
mutsea-database/src/analytics/: mod.rs
mutsea-database/src/backends/: backend_type.rs  mod.rs  mysql.rs  pool.rs  postgresql.rs
mutsea-database/src/models/: ai_decision.md  ai_decision.rs  ecosystem_state.rs  emergent_behavior.rs  learning_data.rs  mod.rs  performance_metrics.rs  player_behavior.rs  world_state.md  world_state.rs
mutsea-database/src/models/ecosystem_state/: environmental.rs
mutsea-database/src/models/npc_state/: ai_controller.rs  behavioral.rs  cognitive.rs  economic.rs  health.rs  mod.rs  npc_state.md  physical.rs  social.rs
mutsea-database/src/models/performance_metrics/: ai_metrics.rs  core_metrics.rs  health_metrics.rs  system_metrics.rs
mutsea-database/src/opensim/: mod.rs  models.rs  queries.rs  schema.rs
mutsea-database/src/opensim/queries/: asset_queries.rs  mod.rs  region_queries.rs  user_queries.rs
mutsea-database/src/queries/: mod.rs  world_queries.rs
mutsea-database/src/sql/opensim/: create_assets.sql  create_inventory.sql  create_parcels.sql  create_primitives.sql  create_regions.sql  create_terrain.sql  create_users.sql  insert_asset.sql  insert_region.sql  insert_user_account.sql  select_asset.sql  select_region.sql  select_user_account.sql
mutsea-database/src/sql/postgresql/ai_decisions/: ai_effectiveness_metrics.sql  batch_update_feedback.sql  insert_ai_decision.sql  select_ai_decisions.sql
mutsea-database/src/sql/postgresql/analytics/: anomalous_world_states.sql  environmental_trends.sql  player_patterns_analysis.sql  world_evolution_patterns.sql
mutsea-database/src/sql/postgresql/ecosystem/: batch_insert_ecosystem.sql  ecosystem_health_metrics.sql  insert_ecosystem_state.sql  select_ecosystem_states.sql
mutsea-database/src/sql/postgresql/emergent_behavior/: batch_insert_emergent.sql  emergent_analysis.sql  insert_emergent_behavior.sql  select_emergent_behaviors.sql
mutsea-database/src/sql/postgresql/performance/: batch_insert_metrics.sql  insert_performance_metrics.sql  performance_optimization.sql  select_performance_metrics.sql
mutsea-database/src/sql/postgresql/player_behavior/: batch_insert_behaviors.sql  insert_player_behavior.sql  player_behavior_patterns.sql  select_player_behaviors.sql
mutsea-database/src/sql/postgresql/schema/: create_ai_decisions.sql  create_ai_global_mind_state.sql  create_biomes.sql  create_ecosystem_states.sql  create_emergent_behaviors.sql  create_learning_data.sql  create_npc_states.sql  create_opensim_compatibility.sql  create_performance_metrics.sql  create_player_behaviors.sql  create_player_quest_progress.sql  create_quests.sql  create_story_events.sql  create_world_states.sql
mutsea-database/src/sql/postgresql/world_state/: batch_insert_world_states.sql  delete_old_world_states.sql  insert_world_state.sql  select_latest_world_state.sql  select_world_state_by_id.sql  select_world_states_by_time_range.sql  update_world_state.sql  world_state_statistics.sql
mutsea-database/src/traits/: query_builder.rs
mutsea-database/src/utils/: mod.md  mod.rs  parameter_binding.rs  result_parsing.md  result_parsing.rs  sql_loader.rs
mutsea-database/tests/: sqlite_integration.rs
mutsea-examples/: Cargo.toml
mutsea-grid-server/: Cargo.toml
mutsea-lludp-server/: Cargo.toml
mutsea-lludp-server/src/: handler_animation.rs  handler_auth.rs  handler_packet.rs  handler_ping.rs  handler_region.rs  handler_teleport.rs  server.rs
mutsea-logging/: Cargo.toml
mutsea-messaging/: Cargo.toml
mutsea-monitoring/: Cargo.toml
mutsea-network/: Cargo.toml
mutsea-network/src/: client.rs  error.rs  http.rs  lib.rs  lludp.rs  lludp_server.rs  message.rs  session.rs  websocket.rs
mutsea-network/src/lludp_server/: circuit.rs  handler_chat.rs  handler_movement.rs  handler_object.rs  handler_packet.rs  handler_proximity.rs  handlers.rs  mod.rs  stats.rs
mutsea-opensim-bridge/: Cargo.toml
mutsea-physics/: Cargo.toml
mutsea-protocol/: Cargo.toml
mutsea-protocol/src/: caps.rs  codec.rs  constants.rs  error.rs  http.rs  lib.rs  lludp.rs  login.rs  packet.rs
mutsea-regions/: Cargo.toml
mutsea-server/: Cargo.toml
mutsea-server/src/: main.rs  opensim_server.rs
mutsea-tests/: Cargo.toml
mutsea-tools/: Cargo.toml
mutsea-user-server/: Cargo.toml
mutsea-users/: Cargo.toml
scripts/: build.sh  dev-setup.sh  first-run.sh  init-project.sh  migrate.sh  setup_database.sh
