[package]
name = "mutsea-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mutsea command-line interface"

[dependencies]
mutsea-core = { path = "../mutsea-core" }
tracing = "0.1.41"
clap = { version = "4.5.39", features = ["derive"] }
tokio = "1.45.1"
tracing-subscriber = "0.3.19"
rpassword = "7.3"

