# mutsea-cli/Cargo.toml
[package]
name = "mutsea-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mutsea command-line interface with OpenSim user management"

[dependencies]
mutsea-core = { path = "../mutsea-core" }
mutsea-protocol = { path = "../mutsea-protocol" }
tracing = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }