[package]
name = "mutsea-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core types, traits, and utilities for the Mutsea virtual world platform"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.140"
toml = "0.8.22"
async-trait = "0.1.88"
metrics = { workspace = true, optional = true }

[features]
default = []
ai = []
metrics = ["dep:metrics"]
