# mutsea-network/Cargo.toml
[package]
name = "mutsea-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Network protocols and communication for Mutsea with OpenSim compatibility"

[dependencies]
mutsea-core = { path = "../mutsea-core" }
mutsea-protocol = { path = "../mutsea-protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = "1.5"
async-trait = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }