# mutsea-protocol/Cargo.toml
[package]
name = "mutsea-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "OpenSim LLUDP and HTTP protocol implementation with full compatibility"

[dependencies]
mutsea-core = { path = "../mutsea-core" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = "1.5"
bitflags = { workspace = true }
nom = { workspace = true }
crc32fast = { workspace = true }
byteorder = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
# For XMLRPC parsing
roxmltree = "0.18"
quick-xml = { version = "0.31", features = ["serialize"] }