[package]
name = "mutsea-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Mutsea virtual world server"

[dependencies]
mutsea-core = { path = "../mutsea-core" }
mutsea-network = { path = "../mutsea-network" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }