# mutsea-server/Cargo.toml
[package]
name = "mutsea-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Mutsea virtual world server with OpenSim compatibility"

[dependencies]
mutsea-core = { path = "../mutsea-core" }
mutsea-network = { path = "../mutsea-network" }
mutsea-protocol = { path = "../mutsea-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }